# LaudareAnnotator

./: Readme.md  laudare.inx  laudare.py  laudare_count.inx  laudare_export.inx  main_count.py  main_export.py  pyproject.toml
laudare/: count.py  export.py  gui.py  main.py  utils.py
