[project]
name = "laudareannotator"
version = "0.2"
description = "An Inkscape extension to annotate images for computer-vision tasks"
authors = [
    {name = "Federico Simonetta", email = "federico.simonetta@gssi.it"},
]
dependencies = [
    "inkex>=1.2",
    "PyGObject>=3.42.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "snoop>=0.4.3",
]
